Add spec for additional endpoints
