# api/swagger.yml
@@ -58,14 +58,89 @@ paths:
       - "text/html"
       responses:
         "200":
-          description: "The authorization page"
+          description: "The authorization page."
+    post:
+      tags:
+      - "OAuth2"
+      summary: "Create authorization endpoint"
+      description: "Authorizes an application on behalf of the user."
+      operationId: "create_authorization"
+      parameters:
+      - in: "query"
+        name: "response_type"
+        type: "string"
+        description: "The expected response type (currently only code is supported)."
+        required: true
+      - in: "query"
+        name: "client_id"
+        type: "string"
+        description: "The unique identifier of the client that has been registered with the auth server."
+        required: true
+      - in: "query"
+        name: "redirect_uri"
+        type: "string"
+        description: "The URI the client will be redirected to after a successful authorization (has to bee the same URI that has been registered with the auth server)."
+        required: true
+      - in: "query"
+        name: "scope"
+        type: "string"
+        description: "Comma-separated list of scopes the client wants to request."
+      - in: "query"
+        name: "state"
+        type: "string"
+        description: "Opage value that will be returned unmodified after the redirect."
+        required: true
+      produces:
+      - "text/html"
+      responses:
+        "302":
+          description: "Redirect to the given redirect_uri."
+
+  /authenticate:
+    get:
+      tags:
+      - "OAuth2"
+      summary: "Authentication entry point"
+      description: "Presents the user a selection of authentication providers."
+      operationId: "authenticate"
+      parameters:
+      - in: "query"
+        name: "response_type"
+        type: "string"
+        description: "The expected response type (currently only code is supported)."
+        required: true
+      - in: "query"
+        name: "client_id"
+        type: "string"
+        description: "The unique identifier of the client that has been registered with the auth server."
+        required: true
+      - in: "query"
+        name: "redirect_uri"
+        type: "string"
+        description: "The URI the client will be redirected to after a successful authorization (has to bee the same URI that has been registered with the auth server)."
+        required: true
+      - in: "query"
+        name: "scope"
+        type: "string"
+        description: "Comma-separated list of scopes the client wants to request."
+      - in: "query"
+        name: "state"
+        type: "string"
+        description: "Opage value that will be returned unmodified after the redirect."
+        required: true
+      produces:
+      - "text/html"
+      responses:
+        "200":
+          description: "The authentication page."
+
   /token:
     post:
       tags:
       - "OAuth2"
       summary: "Token endpoint"
       description: "Endpoint to exchange an authorization code for an access token."
-      operationId: "token"
+      operationId: "create_token"
       security:
       - basicAuth: []
       consumes:
